# cruel-companion

./: .gitignore  Companion.spec  README.md  pyproject.toml
companion/: __main__.py  app.py
companion/capture/: frame_tap.py  reassembler.py  sniffer.py
companion/identity/: resolver.py
companion/protocol/: events.py  parser.py
companion/rules/: engine.py  packs.py  schema.py
companion/state/: game_state.py
companion/ui/: clickthrough_win32.py  inspector.py  overlay.py  queue_bridge.py  settings_window.py  sounds.py  theme.py
companion/vision/: capture.py  cues.py  detector.py  ocr.py  window.py  worker.py
config/: rules.yaml  settings.yaml
config/bosses/: _TEMPLATE.yaml  escherion.yaml  ultra_darkon.yaml
tests/: test_events.py  test_frame_tap.py  test_game_state.py  test_identity_resolver.py  test_packs.py  test_parser.py  test_reassembler.py  test_rules_engine.py  test_schema.py  test_schema_validation.py  test_timer_rules.py  test_vision_detector.py  test_vision_ocr.py  test_visual_cues.py
tests/fixtures/: sample_events.jsonl
tools/: capture_spike.py  make_release.py  replay_canned_events.py  selftest_vision.py  vision_probe.py
