[project]
name = "companion"
version = "0.5.0"
description = "Passive AQW combat-alert overlay (reads your own network traffic only; no packet injection, no input automation)"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5",
    "pyyaml>=6.0",
    "mss>=9.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["companion*"]
